[gd_scene load_steps=5 format=3 uid="uid://bk1ol31gv4shw"]

[ext_resource type="Script" uid="uid://buwvqlafeq20v" path="res://thing_jam.gd" id="1_udhia"]
[ext_resource type="Script" uid="uid://cjeefxfi8r8xj" path="res://timer.gd" id="3_udhia"]
[ext_resource type="PackedScene" uid="uid://bo3ewv2iadgxw" path="res://Towers/place_tower_button.tscn" id="4_owrrb"]
[ext_resource type="Script" uid="uid://5ld4n0xdiwso" path="res://upgrade_tower_button.gd" id="6_8lc4r"]

[node name="thingJam" type="Node2D"]
script = ExtResource("1_udhia")

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("3_udhia")

[node name="NextPhaseTimer" type="Timer" parent="Timer"]
wait_time = 5.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlaceTowerButton" parent="CanvasLayer" instance=ExtResource("4_owrrb")]

[node name="UpgradeTowerButton" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -218.0
offset_top = -32.0
offset_right = -91.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "Upgrade Tower"
script = ExtResource("6_8lc4r")

[connection signal="timeout" from="Timer" to="Timer" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer/NextPhaseTimer" to="Timer" method="_on_next_phase_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/UpgradeTowerButton" to="CanvasLayer/UpgradeTowerButton" method="_on_pressed"]
